--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,10 +24,10 @@
         android:layout_marginTop="5dp"
         android:text="@string/TxtHomeMeusProjetosStr"
         app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+        app:layout_constraintTop_toBottomOf="@+id/recyclerCategorias" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/recyclerCategorias"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/fabNewProjeto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
@@ -48,6 +48,7 @@
         app:srcCompat="@android:drawable/ic_menu_delete" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerProjetosSalvos"
         android:layout_width="409dp"
         android:layout_height="328dp"
         android:layout_marginStart="20dp"
