--- a/app/src/main/res/layout/adapter_home_projeto_categoria.xml
+++ b/app/src/main/res/layout/adapter_home_projeto_categoria.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+    android:layout_margin="5dp"
+    app:cardCornerRadius="20dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
@@ -26,12 +27,14 @@
         <Button
             android:id="@+id/buttoProjetoName"
             android:layout_width="0dp"
-            android:layout_height="30dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:elevation="20dp"
+            android:backgroundTint="#FFFFFF"
+            android:elevation="40dp"
             android:padding="0dp"
             android:text="SPT"
+            android:textColor="@color/destaque"
             app:cornerRadius="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
