--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,18 +1,36 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+    <!-- Padrão do tema claro . -->
     <style name="Theme.MontaigneApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
+
+
+
+        <!-- Primary color. -->
         <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryVariant">#000000</item>
         <item name="colorOnPrimary">@color/white</item>
 
+
+        <!-- Estilos padrão. -->
+        <item name="android:textColor">@color/black</item>
+        <item name="android:colorAccent">@color/accent</item>
+
+
+
+
+
+
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/color_primary</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
+
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+
+
+
+        <!--Styles do aplicativo. -->
     </style>
 
     <style name="Theme.MontaigneApp.NoActionBar">
