--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,8 @@
         <!-- Estilos padrão. -->
         <item name="android:textColor">@color/black</item>
         <item name="android:colorAccent">@color/accent</item>
+        <item name="android:colorBackground">@color/accent</item>
+
 
 
 
