--- a/app/src/main/res/layout/acitivity_furo.xml
+++ b/app/src/main/res/layout/acitivity_furo.xml
@@ -6,29 +6,29 @@
     android:layout_height="match_parent">
 
     <ImageButton
-        android:id="@+id/imageButtonExcluirAmostra"
+        android:id="@+id/imageButtonDeleteAmostra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#00FFFFFF"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonImprimir"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonPrint"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonImprimir"
-        app:layout_constraintTop_toTopOf="@+id/buttonImprimir"
+        app:layout_constraintStart_toEndOf="@+id/buttonPrint"
+        app:layout_constraintTop_toTopOf="@+id/buttonPrint"
         app:srcCompat="@android:drawable/ic_menu_delete" />
 
     <ImageButton
-        android:id="@+id/imageButtonAdicionarAmostra"
+        android:id="@+id/imageButtonAddAmostra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:background="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonImprimir"
+        app:layout_constraintEnd_toStartOf="@+id/buttonPrint"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
     <Button
-        android:id="@+id/buttonImprimir"
+        android:id="@+id/buttonPrint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Amostras N"
-        app:layout_constraintBottom_toTopOf="@+id/buttonImprimir"
+        app:layout_constraintBottom_toTopOf="@+id/buttonPrint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -53,7 +53,7 @@
         android:id="@+id/recyclerAmostra"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonImprimir"
+        app:layout_constraintBottom_toTopOf="@+id/buttonPrint"
         app:layout_constraintTop_toBottomOf="@+id/textAviso"
         app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="-104dp" />
