--- a/app/src/main/res/layout/fragment_carimbo_ensaio.xml
+++ b/app/src/main/res/layout/fragment_carimbo_ensaio.xml
@@ -40,7 +40,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:ems="10"
-                android:hint="@string/btn_start_furo"
+                android:hint="@string/registration_Data_inicio_furo"
                 android:inputType="date|datetime"
                 android:minHeight="48dp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline5"
