--- a/app/src/main/res/layout/adapter_amostra.xml
+++ b/app/src/main/res/layout/adapter_amostra.xml
@@ -25,7 +25,7 @@
             android:layout_marginTop="28dp"
             android:ems="10"
             android:hint="1"
-            android:inputType="number" />
+            android:inputType="number|numberDecimal" />
 
         <EditText
             android:id="@+id/editTextPenetracao1"
@@ -49,7 +49,7 @@
             android:layout_marginTop="28dp"
             android:ems="10"
             android:hint="1"
-            android:inputType="number" />
+            android:inputType="number|numberDecimal" />
 
         <EditText
             android:id="@+id/editTextPenetracao2"
@@ -73,7 +73,7 @@
             android:layout_marginTop="28dp"
             android:ems="10"
             android:hint="1"
-            android:inputType="number" />
+            android:inputType="number|numberDecimal" />
 
         <EditText
             android:id="@+id/editTextPenetracao3"
@@ -97,7 +97,7 @@
             android:layout_toStartOf="@+id/dividerSpt"
             android:ems="10"
             android:hint="1"
-            android:inputType="number" />
+            android:inputType="numberSigned|number|numberDecimal" />
 
         <View
             android:id="@+id/dividerSpt"
