--- a/app/src/main/res/layout/adapter_spt_furo.xml
+++ b/app/src/main/res/layout/adapter_spt_furo.xml
@@ -9,12 +9,14 @@
 
     android:elevation="10dp"
     app:cardCornerRadius="20dp"
-   >
+    app:cardElevation="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp">
+        android:padding="10dp"
+        app:cardCornerRadius="20dp"
+        >
 
         <ImageView
             android:id="@+id/imageViewFuro"
