--- a/app/src/main/res/layout/fragment_spt_carimbo_ensaio.xml
+++ b/app/src/main/res/layout/fragment_spt_carimbo_ensaio.xml
@@ -34,10 +34,10 @@
 
             <ImageButton
                 android:id="@+id/calendarioDataInicio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:src="@drawable/ic_calendar"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="4dp"
+                android:src="@drawable/ic_date"
                 app:layout_constraintBottom_toTopOf="@+id/editTextStartDate"
                 app:layout_constraintStart_toEndOf="@id/textStartDate"
                 app:layout_constraintTop_toTopOf="parent"
