--- a/app/src/main/res/layout/fragment_spt_furo.xml
+++ b/app/src/main/res/layout/fragment_spt_furo.xml
@@ -10,8 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="Substituir Nome do Furo "
-        android:textSize="25dp"
+        android:text="@string/fragment_spt_furo_title"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
